--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,22 @@
 		    <artifactId>opencsv</artifactId>
 		    <version>2.3</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.detectlanguage</groupId>
+		    <artifactId>detectlanguage</artifactId>
+		    <version>1.0.5</version>
+		</dependency>
+		<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1</version>
+	</dependency>
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.2.4</version>
+  		<scope>compile</scope>
+  	</dependency>
     </dependencies>
 
     <properties>
