--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,31 @@
   		<version>2.2.4</version>
   		<scope>compile</scope>
   	</dependency>
+  	<dependency>
+		<groupId>org.apache.lucene</groupId>
+		<artifactId>lucene-core</artifactId>
+		<version>4.10.1</version>
+	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.6</version>
+	</dependency>
+	<dependency>
+		<groupId>edu.stanford.nlp</groupId>
+		<artifactId>stanford-corenlp</artifactId>
+		<version>3.4.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.languagetool</groupId>
+		<artifactId>languagetool</artifactId>
+		<version>2.0.1</version>
+	</dependency>
+	
+
+	
+	
+  	
     </dependencies>
 
     <properties>
