--- a/pom.xml
+++ b/pom.xml
@@ -28,42 +28,42 @@
 		    <artifactId>detectlanguage</artifactId>
 		    <version>1.0.5</version>
 		</dependency>
+			<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
+	  	<dependency>
+	  		<groupId>com.google.code.gson</groupId>
+	  		<artifactId>gson</artifactId>
+	  		<version>2.2.4</version>
+	  		<scope>compile</scope>
+	  	</dependency>
+	  	<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>4.10.1</version>
+		</dependency>
 		<dependency>
-		<groupId>com.googlecode.json-simple</groupId>
-		<artifactId>json-simple</artifactId>
-		<version>1.1</version>
-	</dependency>
-  	<dependency>
-  		<groupId>com.google.code.gson</groupId>
-  		<artifactId>gson</artifactId>
-  		<version>2.2.4</version>
-  		<scope>compile</scope>
-  	</dependency>
-  	<dependency>
-		<groupId>org.apache.lucene</groupId>
-		<artifactId>lucene-core</artifactId>
-		<version>4.10.1</version>
-	</dependency>
-	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.6</version>
-	</dependency>
-	<dependency>
-		<groupId>edu.stanford.nlp</groupId>
-		<artifactId>stanford-corenlp</artifactId>
-		<version>3.4.1</version>
-	</dependency>
-	<dependency>
-		<groupId>org.languagetool</groupId>
-		<artifactId>languagetool</artifactId>
-		<version>2.0.1</version>
-	</dependency>
-	
-
-	
-	
-  	
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.languagetool</groupId>
+			<artifactId>languagetool</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.6.6</version>
+		</dependency>
     </dependencies>
 
     <properties>
